<resources>
    <string name="app_name">WeiFu</string>
    <!-- activity LoginActivity -->
    <string name="activity_login_et_name_hint">请输入用户名 </string>
    <string name="activity_login_et_password_hint">请输入密码 </string>
    <string name="activity_login_et_btn_login">登录</string>
    <string name="activity_login_et_btn_regist">注册</string>
    <string name="activity_main_menu_home">首页</string>
    <string name="activity_main_menu_shop">巡店</string>
    <string name="activity_main_menu_visit">拜访</string>
    <string name="activity_main_menu_train">培训</string>
    <string name="activity_main_menu_me">个人中心</string>

    <string name="txt_home">首页</string>
    <string name="txt_shop">巡店</string>
    <string name="txt_visit">拜访</string>
    <string name="txt_train">培训</string>
    <string name="txt_me">个人中心</string>


    <!--home fragment-->
    <string name="fragment_home_info">最新资讯</string>
    <string name="fragment_home_task">最新任务</string>
    <string name="fragment_home_more">更多</string>
    <!--create visit activity-->
    <string name="activity_createvisit_shopname">店面名称：</string>
    <string name="activity_createvisit_shopname_hint">请输入店面名称</string>
    <string name="activity_createvisit_shopid">店面编号：</string>
    <string name="activity_createvisit_shopwhere">店面位置：</string>
    <string name="activity_createvisit_shopwhere_hint">详细地址（如门牌号等）</string>
    <string name="activity_createvisit_title_img">图片采集</string>
    <string name="activity_createvisit_title_score">评分&#038;意见反馈</string>
    <string name="activity_createvisit_score_shop">店面整洁：</string>
    <string name="activity_createvisit_score_person">人员服务：</string>
    <string name="activity_createvisit_score_product">产品推荐：</string>
    <string name="activity_createvisit_edit_hint">请输入您的反馈，最多500字。\n点击时弹出软键盘。</string>
    <string name="activity_createvisit_save">临时保存</string>
    <string name="activity_createvisit_submit">立即提交</string>
    <string name="activity_visitshop_search">输入店铺名称或ID搜索</string>

    <!--toast语句-->
    <string name="search_none">没有搜到相关信息</string>
    <string name="please_resubmit">网络不给力，请重新提交</string>
    <string name="please_login">你尚未登录,请先登录</string>
    <string name="http_failed_click_refresh">联网失败\n点击刷新</string>
    <string name="http_failed_refresh">网络请求失败，点击刷新</string>
    <string name="please_into_userinfo">请输入店名</string>
    <string name="http_failed">网络请求失败，请检查网络</string>
    <string name="image_no_exist">图片已不存在</string>
    <string name="photo_help_text">&#160;&#160;&#160;&#160;注意：拍照不得少于2张，为培训开始一张和培训结束一张。第一张和最后一张时间间隔不得少于1分钟</string>
    <string name="shop_item_name">店面名称：</string>
    <string name="shop_item_time">巡店日期： </string>

    <!--fragment MeFragment-->
    <string name="fragment_me_tv_me">个人资料 </string>
    <string name="fragment_me_tv_clear">清除缓存 </string>
    <string name="fragment_me_tv_feedback">意见反馈 </string>
    <string name="fragment_me_tv_about">关于APP </string>
    <string name="fragment_me_tv_version">新版本检测 </string>
    <string name="fragment_me_tv_exit">退出应用 </string>

    <!--popwindow updateAPP-->
    <string name="popwindow_update_tv_title">发现新版本 </string>
    <string name="popwindow_update_btn_later">稍后再说 </string>
    <string name="popwindow_update_btn_update">立即更新 </string>

</resources>
