<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f2f2f2">

        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="@dimen/width_120"
                    android:layout_height="@dimen/height_120"
                    android:layout_marginTop="@dimen/margin_16"
                    android:background="@color/white"
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardCornerRadius="60dp"
                    app:cardElevation="20dp">

                    <ImageView
                        android:id="@+id/iv_header"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/touxiang" />
                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_7"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#110d0a"
                    android:textSize="@dimen/textsize_16" />

                <TextView
                    android:id="@+id/tv_job"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:padding="@dimen/margin_13"
                    android:text=""
                    android:textColor="@color/text_color_9"
                    android:textSize="@dimen/textsize_14" />
            </LinearLayout>

            <com.weifupro.utils.SetItemView
                android:id="@+id/fragment_me_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isShowUnderLine="false"
                app:leftIcon="@drawable/medata"
                app:leftText="@string/fragment_me_tv_me"
                app:rightIcon="@drawable/task_arrow"
                app:textColor="@color/text_color_6">

            </com.weifupro.utils.SetItemView>

            <com.weifupro.utils.SetItemView
                android:id="@+id/fragment_me_del"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="14dp"
                app:leftIcon="@drawable/clearcache"
                app:leftText="@string/fragment_me_tv_clear"
                app:rightIcon="@drawable/task_arrow"
                app:textColor="@color/text_color_6">

            </com.weifupro.utils.SetItemView>

            <com.weifupro.utils.SetItemView
                android:id="@+id/fragment_me_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:leftIcon="@drawable/appfeedback"
                app:leftText="@string/fragment_me_tv_feedback"
                app:rightIcon="@drawable/task_arrow"
                app:textColor="@color/text_color_6">


            </com.weifupro.utils.SetItemView>

            <com.weifupro.utils.SetItemView
                android:id="@+id/fragment_me_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:leftIcon="@drawable/about"
                app:leftText="@string/fragment_me_tv_about"
                app:rightIcon="@drawable/task_arrow"
                app:textColor="@color/text_color_6">


            </com.weifupro.utils.SetItemView>

            <com.weifupro.utils.SetItemView
                android:id="@+id/fragment_me_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:leftIcon="@drawable/newversion"
                app:leftText="@string/fragment_me_tv_version"
                app:rightIcon="@drawable/task_arrow"
                app:textColor="@color/text_color_6">


            </com.weifupro.utils.SetItemView>

            <com.weifupro.utils.SetItemView
                android:id="@+id/fragment_me_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                app:leftIcon="@drawable/appexit"
                app:leftText="@string/fragment_me_tv_exit"
                app:rightIcon="@drawable/task_arrow"
                app:textColor="@color/text_color_6">

            </com.weifupro.utils.SetItemView>
        </LinearLayout>
    </ScrollView>


</LinearLayout>