<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@mipmap/loginguide" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_name_design"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_edit_marginleft"
        android:layout_marginRight="@dimen/login_edit_marginright"
        android:layout_marginTop="@dimen/login_edit_margintop">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/activity_login_et_name_hint"
            android:textColor="@color/login_texthint"
            android:textSize="@dimen/login_edit_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_password_design"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterMaxLength="20"
        app:counterEnabled="true"
        android:layout_marginLeft="@dimen/login_edit_marginleft"
        android:layout_marginRight="@dimen/login_edit_marginright"
        android:layout_marginTop="@dimen/login_edit_margintop">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/activity_login_et_password_hint"
            android:textColor="@color/login_texthint"
            android:textSize="@dimen/login_edit_hint" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_btn_marginleft"
        android:layout_marginRight="@dimen/login_btn_marginright"
        android:layout_marginTop="@dimen/login_edit_margintop"
        android:background="@mipmap/login_btn"
        android:text="@string/activity_login_et_btn_login"
        android:textColor="@color/login_texthint"
        android:textSize="@dimen/login_edit_hint" />

</LinearLayout>